cart details added

--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -7,9 +7,10 @@
     margin-bottom: 50px;
     margin-right: 50px;
     width: 845px;
-    height: 721px;
-    border: 1px solid black;
+    height: 800px;
+    border: 1px solid rgba(128, 128, 128, 0.186);
     border-radius: 10px;
+    box-shadow: 5px 5px rgba(128, 128, 128, 0.186);
 }
 .news img{
     width: 845px;
@@ -22,6 +23,16 @@
     border-radius: 100%;
 }
 
+.blogTitle{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 160%;
+}
+
+.markAsRead{
+    color: blue;
+    text-decoration: underline;
+}
 
 
 
