--- a/src/Components/Container/Container.css
+++ b/src/Components/Container/Container.css
@@ -7,6 +7,9 @@
     grid-template-columns: 3fr 1fr;
     gap: 10px;
 }
+.questions{
+    color: #6047EC;
+}
 
 .bookmark-container{
     position: sticky;
