responsive for small device  added

--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -39,6 +39,18 @@
     height: 24px;
 }
 
+@media only screen and (max-width: 600px) {
+    .coverImage img{
+        width: 380px;
+        height: 300px;
+    }
+    .news{
+        width: 400px;
+        height: 700px;
+    }
+}
+
+
 
 
 
