--- a/src/Components/Container/Container.css
+++ b/src/Components/Container/Container.css
@@ -14,13 +14,10 @@
 .cart-container{
     position: sticky;
     top: 0;
-    
+    height: 100vh;
 }
 
-.cart-time{
-    background-color:rgba(17, 17, 17, 0.05);
-    color: #6047EC;
-}
+
 
 .cart-blog{
     background-color: rgba(17, 17, 17, 0.05);
