--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -4,11 +4,11 @@
     background-color:rgba(17, 17, 17, 0.05);
     color: #6047EC;
 }
-.bookmark-div h4{
+.bookmark-div p{
     background-color: rgb(255, 255, 255);
     margin-bottom: 15px;
     border-radius: 10px ;
     padding: 5px;
-    font-size: 25px;
+    /* font-size: 25px; */
     font-weight: 700px;
 }
