--- a/src/Components/Bookmark/Bookmark.css
+++ b/src/Components/Bookmark/Bookmark.css
@@ -1,1 +1,9 @@
 
+.blogtitle h6{
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 15px;
+    border-radius: 10px ;
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 700px;
+}
